--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>landing page</title>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,14 +23,83 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-</head>
-<body>
-    
+  </head>
+  <body>
+    <header></header>
 
-     <script
+    <div
+      id="carouselExampleFade"
+      class="carousel slide carousel-fade position-fixed"
+      data-bs-ride="carousel"
+      data-bs-interval="3500"
+    >
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            src="/assets/hotel-7885138_1280.jpg"
+            class="d-block w-100"
+            alt="..."
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            src="/assets/breakfast-4394771_1280.jpg"
+            class="d-block w-100"
+            alt="..."
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            src="/assets/swimming-2392283_1280.jpg"
+            class="d-block w-100"
+            alt="..."
+          />
+        </div>
+      </div>
+    </div>
+
+    <div class="position-relative d-flex flex-column">
+      <div class="heading d-flex justify-content-center align-content-center">
+        <div class="d-flex">
+          <div class="since">1999</div>
+          <img class="logo" src="/assets/pngwing.com.png" alt="" />
+        </div>
+        <div class="stars">*****</div>
+      </div>
+      <div class="heading container-fluid">
+        <ul class="d-flex justify-content-center align-content-center gap-5">
+          <li>ROOMS</li>
+          <li>WELLNESS</li>
+          <li>GASTRO</li>
+          <li>HOTEL</li>
+          <li>EVENTS</li>
+          <li>CONTACT</li>
+        </ul>
+      </div>
+      <div
+        class="gestro text-center d-flex flex-column justify-content-center align-items-center"
+      >
+        <h1>Gastronomy</h1>
+        <p class="fs-2 text-white">
+          Our team of chefs prepare meals according to traditional recipes using
+          fresh and seasonal ingredients.
+        </p>
+        <div id="container">
+          <a href="#page2"> <div class="circle">Explore</div></a>
+        </div>
+      </div>
+
+      <div id="page2" style="height: 1000px; background-color: white"></div>
+    </div>
+
+    <footer></footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-</body>
+    <script src="/js/app.js"></script>
+  </body>
 </html>
