landing page updated

--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img
-            src="/assets/hotel-7885138_1280.jpg"
+            src="/assets/suite-de-prestige-coco.jpg"
             class="d-block w-100"
             alt="..."
           />
         </div>
         <div class="carousel-item">
           <img
-            src="/assets/breakfast-4394771_1280.jpg"
+            src="/assets/suite-de-prestige-imperiale.jpg"
             class="d-block w-100"
             alt="..."
           />
         </div>
         <div class="carousel-item">
           <img
-            src="/assets/swimming-2392283_1280.jpg"
+            src="/assets/suite-de-prestige-vendome.jpg"
             class="d-block w-100"
             alt="..."
           />
@@ -67,7 +67,9 @@
         <div class="stars">*****</div>
       </div>
       <div class="heading container-fluid">
-        <ul class="d-flex justify-content-center align-content-center gap-5">
+        <ul
+          class="d-none d-sm-flex justify-content-center align-content-center gap-2 gap-sm-3 gap-md-4 gap-lg-5 gap-xl-5"
+        >
           <li>ROOMS</li>
           <li>WELLNESS</li>
           <li>GASTRO</li>
@@ -80,12 +82,14 @@
         class="gestro text-center d-flex flex-column justify-content-center align-items-center"
       >
         <h1>Gastronomy</h1>
-        <p class="fs-2 text-white">
+        <p class="text-white">
           Our team of chefs prepare meals according to traditional recipes using
           fresh and seasonal ingredients.
         </p>
         <div id="container">
-          <a href="#page2"> <div class="circle">Explore</div></a>
+          <a href="#page2">
+            <div class="circle"><i class="fa-solid fa-angle-down"></i></div
+          ></a>
         </div>
       </div>
 
