room page complete

--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
         </ul>
       </div>
       <div
+        id="booking"
+        class="menu-booking d-flex justify-content-between sticky-top"
+      >
+        <div class="menu">menu</div>
+        <div class="booking">booking</div>
+      </div>
+      <div
         class="gestro text-center d-flex flex-column justify-content-center align-items-center"
       >
         <h1>Gastronomy</h1>
@@ -93,10 +100,74 @@
         </div>
       </div>
 
-      <div id="page2" style="height: 1000px; background-color: white"></div>
+      <div class="text-center" id="page2" style="background-color: white">
+        <h1 class="prefer p-5">
+          Do you prefer accommodation directly in a hotel, with all the services
+          and comforts that belong to it? We offer comfortably furnished rooms
+          and modern suits.
+        </h1>
+        <div class="container d-flex flex-column gap-5">
+          <div class="room-img">
+            <img src="assets/suite-de-prestige-coco.jpg" alt="" />
+            <div
+              class="centered text-center d-flex flex-column justify-content-center align-items-center"
+            >
+              <h1 class="p-1">Rooms</h1>
+              <p>
+                Comfortably furnished smaller <br />
+                accommodation. Prices from 90 €.
+              </p>
+              <button class="choose">choose</button>
+            </div>
+          </div>
+
+          <div class="room-img">
+            <img src="assets\suite-de-prestige-fitzgerald.jpg" alt="" />
+            <div
+              class="centered text-center d-flex flex-column justify-content-center align-items-center"
+            >
+              <h1 class="p-1">Suits</h1>
+              <p>
+                Spacious accommodation with stylish <br />
+                furnishings. Prices from 180 €.
+              </p>
+              <button class="choose">choose</button>
+            </div>
+          </div>
+
+          <div class="room-img">
+            <img src="assets\suite-de-prestige-mansart.jpg" alt="" />
+            <div
+              class="centered text-center d-flex flex-column justify-content-center align-items-center"
+            >
+              <h1 class="p-1">Villas</h1>
+              <p>
+                Spacious accommodation with stylish <br />
+                furnishings. Prices from 180 €.
+              </p>
+              <button class="choose">choose</button>
+            </div>
+          </div>
+
+
+                    <div class="room-img">
+            <img src="assets\spa.jpeg" alt="" />
+            <div
+              class="centered text-center d-flex flex-column justify-content-center align-items-center"
+            >
+              <h1 class="p-1">Packages</h1>
+              <p>
+               Stay packages with unlimited access to the <br> Wellness & Spa.
+              </p>
+              <button class="choose">choose</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <footer></footer>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script
