--- a/pages/gastro.html
+++ b/pages/gastro.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>landing page</title>
+    <title>gastronomy</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -35,25 +35,13 @@
     >
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img
-            src="/assets/suite-de-prestige-coco.jpg"
-            class="d-block w-100"
-            alt="..."
-          />
+          <img src="/assets/gastro4.jpg" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
-          <img
-            src="/assets/suite-de-prestige-imperiale.jpg"
-            class="d-block w-100"
-            alt="..."
-          />
+          <img src="/assets/gastro5.jpg" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
-          <img
-            src="/assets/suite-de-prestige-vendome.jpg"
-            class="d-block w-100"
-            alt="..."
-          />
+          <img src="/assets/gastro3.jpg" class="d-block w-100" alt="..." />
         </div>
       </div>
     </div>
@@ -70,9 +58,9 @@
         <ul
           class="d-none d-sm-flex justify-content-center align-content-center gap-2 gap-sm-3 gap-md-4 gap-lg-5 gap-xl-5"
         >
-          <li class="text-decoration-underline">ROOMS</li>
+          <a href="/index.html"><li>ROOMS</li></a>
           <a href="/pages/wellness.html"><li>WELLNESS</li></a>
-          <a href="/pages/gastro.html"><li>GASTRO</li></a>
+          <a class="text-decoration-underline" href=""><li>GASTRO</li></a>
           <a href="/pages/hotel.html"><li>HOTEL</li></a>
           <li>EVENTS</li>
           <li>CONTACT</li>
@@ -83,14 +71,12 @@
         class="menu-booking d-flex justify-content-between sticky-top"
       >
         <div class="menu">menu</div>
-        <a href="https://booking.hotelkaskady.sk/en"
-          ><div class="booking">booking</div></a
-        >
+        <div class="booking">booking</div>
       </div>
       <div
         class="gestro text-center d-flex flex-column justify-content-center align-items-center"
       >
-        <h1>ROOMS</h1>
+        <h1>Gastronomy</h1>
         <p class="text-white">
           Our team of chefs prepare meals according to traditional recipes using
           fresh and seasonal ingredients.
@@ -103,69 +89,7 @@
       </div>
 
       <div class="text-center" id="page2" style="background-color: white">
-        <h1 class="prefer p-5">
-          Do you prefer accommodation directly in a hotel, with all the services
-          and comforts that belong to it? We offer comfortably furnished rooms
-          and modern suits.
-        </h1>
-        <div class="container d-flex flex-column gap-5">
-          <div class="room-img">
-            <img src="assets/suite-de-prestige-coco.jpg" alt="" />
-            <div
-              class="centered text-center d-flex flex-column justify-content-center align-items-center"
-            >
-              <h1 class="card-header p-1">Rooms</h1>
-              <p>
-                Comfortably furnished smaller <br />
-                accommodation. Prices from 90 €.
-              </p>
-              <button class="choose">choose</button>
-            </div>
-          </div>
-
-          <div class="room-img">
-            <img src="assets\suite-de-prestige-fitzgerald.jpg" alt="" />
-            <div
-              class="centered text-center d-flex flex-column justify-content-center align-items-center"
-            >
-              <h1 class="card-header p-1">Suits</h1>
-              <p>
-                Spacious accommodation with stylish <br />
-                furnishings. Prices from 180 €.
-              </p>
-              <button class="choose">choose</button>
-            </div>
-          </div>
-
-          <div class="room-img">
-            <img src="assets\suite-de-prestige-mansart.jpg" alt="" />
-            <div
-              class="centered text-center d-flex flex-column justify-content-center align-items-center"
-            >
-              <h1 class="card-header p-1">Villas</h1>
-              <p>
-                Spacious accommodation with stylish <br />
-                furnishings. Prices from 180 €.
-              </p>
-              <button class="choose">choose</button>
-            </div>
-          </div>
-
-          <div class="room-img">
-            <img src="assets\spa.jpeg" alt="" />
-            <div
-              class="centered text-center d-flex flex-column justify-content-center align-items-center"
-            >
-              <h1 class="card-header p-1">Packages</h1>
-              <p>
-                Stay packages with unlimited access to the <br />
-                Wellness & Spa.
-              </p>
-              <button class="choose">choose</button>
-            </div>
-          </div>
-        </div>
-
+        <h1>Good food is an inseparable part of perfect relaxation and therefore our team of chefs prepare meals according to traditional recipes using fresh, seasonal ingredients from local producers.</h1>
         <div class="pg-footer">
           <footer class="footer">
             <svg
@@ -382,7 +306,7 @@
               <div class="footer-copyright-wrapper">
                 <p class="footer-copyright-text">
                   <a class="footer-copyright-link" href="#" target="_self">
-                    ©2024. | Designed By:Sachi S Bandara. | All rights reserved.
+                    ©2020. | Designed By: Pooja Nahelia. | All rights reserved.
                   </a>
                 </p>
               </div>
