--- a/pages/hotel.html
+++ b/pages/hotel.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>landing page</title>
+    <title>Hotel</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/app.css" />
+    <link rel="stylesheet" href="/css/hotel.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -35,25 +36,13 @@
     >
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img
-            src="/assets/suite-de-prestige-coco.jpg"
-            class="d-block w-100"
-            alt="..."
-          />
+          <img src="/assets/gastro4.jpg" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
-          <img
-            src="/assets/suite-de-prestige-imperiale.jpg"
-            class="d-block w-100"
-            alt="..."
-          />
+          <img src="/assets/gastro5.jpg" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
-          <img
-            src="/assets/suite-de-prestige-vendome.jpg"
-            class="d-block w-100"
-            alt="..."
-          />
+          <img src="/assets/gastro3.jpg" class="d-block w-100" alt="..." />
         </div>
       </div>
     </div>
@@ -70,10 +59,10 @@
         <ul
           class="d-none d-sm-flex justify-content-center align-content-center gap-2 gap-sm-3 gap-md-4 gap-lg-5 gap-xl-5"
         >
-          <li class="text-decoration-underline">ROOMS</li>
+          <a href="/index.html"><li>ROOMS</li></a>
           <a href="/pages/wellness.html"><li>WELLNESS</li></a>
           <a href="/pages/gastro.html"><li>GASTRO</li></a>
-          <a href="/pages/hotel.html"><li>HOTEL</li></a>
+          <a class="text-decoration-underline" href=""><li>HOTEL</li></a>
           <li>EVENTS</li>
           <li>CONTACT</li>
         </ul>
@@ -83,18 +72,13 @@
         class="menu-booking d-flex justify-content-between sticky-top"
       >
         <div class="menu">menu</div>
-        <a href="https://booking.hotelkaskady.sk/en"
-          ><div class="booking">booking</div></a
-        >
+        <div class="booking">booking</div>
       </div>
       <div
         class="gestro text-center d-flex flex-column justify-content-center align-items-center"
       >
-        <h1>ROOMS</h1>
-        <p class="text-white">
-          Our team of chefs prepare meals according to traditional recipes using
-          fresh and seasonal ingredients.
-        </p>
+        <h1>Hotel</h1>
+        <p class="text-white">gallery</p>
         <div id="container">
           <a href="#page2">
             <div class="circle"><i class="fa-solid fa-angle-down"></i></div
@@ -103,66 +87,40 @@
       </div>
 
       <div class="text-center" id="page2" style="background-color: white">
-        <h1 class="prefer p-5">
-          Do you prefer accommodation directly in a hotel, with all the services
-          and comforts that belong to it? We offer comfortably furnished rooms
-          and modern suits.
-        </h1>
-        <div class="container d-flex flex-column gap-5">
-          <div class="room-img">
-            <img src="assets/suite-de-prestige-coco.jpg" alt="" />
-            <div
-              class="centered text-center d-flex flex-column justify-content-center align-items-center"
-            >
-              <h1 class="card-header p-1">Rooms</h1>
-              <p>
-                Comfortably furnished smaller <br />
-                accommodation. Prices from 90 €.
-              </p>
-              <button class="choose">choose</button>
-            </div>
+        <div class="row">
+          <div class="column">
+            <img src="/assets/hotel-7885138_1280.jpg" />
+            <img src="/assets/suite-de-prestige-chopin.jpg" />
+            <img src="/assets/salon-vendome.jpg" />
+            <img src="/assets/suite-de-prestige-grand.jpg" />
+            <img src="/assets/suite-de-prestige-mansart.jpg" />
+            <img src="/assets/suite-executive (1).jpg" />
+            <img src="/assets/suite-de-prestige-proust.jpg" />
           </div>
-
-          <div class="room-img">
-            <img src="assets\suite-de-prestige-fitzgerald.jpg" alt="" />
-            <div
-              class="centered text-center d-flex flex-column justify-content-center align-items-center"
-            >
-              <h1 class="card-header p-1">Suits</h1>
-              <p>
-                Spacious accommodation with stylish <br />
-                furnishings. Prices from 180 €.
-              </p>
-              <button class="choose">choose</button>
-            </div>
+          <div class="column">
+            <img src="/assets/suite-de-prestige-windsor.jpg" />
+            <img src="/assets/suite-de-prestige-grand.jpg" />
+            <img src="/assets/suite-de-prestige-chopin.jpg" />
+            <img src="/assets/suite-de-prestige-chopin.jpg" />
+            <img src="/assets/suite-de-prestige-chopin.jpg" />
+            <img src="/assets/suite-de-prestige-chopin.jpg" />
           </div>
-
-          <div class="room-img">
-            <img src="assets\suite-de-prestige-mansart.jpg" alt="" />
-            <div
-              class="centered text-center d-flex flex-column justify-content-center align-items-center"
-            >
-              <h1 class="card-header p-1">Villas</h1>
-              <p>
-                Spacious accommodation with stylish <br />
-                furnishings. Prices from 180 €.
-              </p>
-              <button class="choose">choose</button>
-            </div>
+          <div class="column">
+            <img src="/assets/suite-de-prestige-hemingway.jpg" />
+            <img src="/assets/suite-de-prestige-fitzgerald.jpg" />
+            <img src="/assets/suite-de-prestige-chopin.jpg" />
+            <img src="/assets/suite-de-prestige-chopin.jpg" />
+            <img src="/assets/suite-de-prestige-chopin.jpg" />
+            <img src="/assets/suite-de-prestige-chopin.jpg" />
+            <img src="/assets/suite-de-prestige-chopin.jpg" />
           </div>
-
-          <div class="room-img">
-            <img src="assets\spa.jpeg" alt="" />
-            <div
-              class="centered text-center d-flex flex-column justify-content-center align-items-center"
-            >
-              <h1 class="card-header p-1">Packages</h1>
-              <p>
-                Stay packages with unlimited access to the <br />
-                Wellness & Spa.
-              </p>
-              <button class="choose">choose</button>
-            </div>
+          <div class="column">
+            <img src="/assets/suite-de-prestige-mansart.jpg" />
+            <img src="/assets/suite-de-prestige-grand (1).jpg" />
+            <img src="/assets/suite-de-prestige-chopin.jpg" />
+            <img src="/assets/suite-de-prestige-chopin.jpg" />
+            <img src="/assets/suite-de-prestige-chopin.jpg" />
+            <img src="/assets/suite-de-prestige-chopin.jpg" />
           </div>
         </div>
 
@@ -382,7 +340,7 @@
               <div class="footer-copyright-wrapper">
                 <p class="footer-copyright-text">
                   <a class="footer-copyright-link" href="#" target="_self">
-                    ©2024. | Designed By:Sachi S Bandara. | All rights reserved.
+                    ©2020. | Designed By: Pooja Nahelia. | All rights reserved.
                   </a>
                 </p>
               </div>
