--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <a href="/pages/gastro.html"><li>GASTRO</li></a>
           <a href="/pages/hotel.html"><li>HOTEL</li></a>
           <li>EVENTS</li>
-          <li>CONTACT</li>
+          <a href="#contact"><li>CONTACT</li></a>
         </ul>
       </div>
       <div
@@ -83,7 +83,7 @@
         class="menu-booking d-flex justify-content-between sticky-top"
       >
         <div class="menu">menu</div>
-        <a href="https://booking.hotelkaskady.sk/en"
+        <a href="https://booking.com"
           ><div class="booking">booking</div></a
         >
       </div>
@@ -166,7 +166,7 @@
           </div>
         </div>
 
-        <div class="pg-footer">
+        <div id="contact" class="pg-footer">
           <footer class="footer">
             <svg
               class="footer-wave-svg"
