--- a/pages/wellness.html
+++ b/pages/wellness.html
@@ -91,7 +91,7 @@
       </div>
 
       <div class="text-center" id="page2" style="background-color: white">
-        <h1>
+        <h1 class="prefer">
           Far from the everyday life, hustle and trouble, we create magical
           moments of peace and relaxation.
         </h1>
@@ -318,7 +318,7 @@
               <div class="footer-copyright-wrapper">
                 <p class="footer-copyright-text">
                   <a class="footer-copyright-link" href="#" target="_self">
-                    ©2020. | Designed By: Pooja Nahelia. | All rights reserved.
+                    ©2024. | Designed By:Sachi S Bandara. | All rights reserved.
                   </a>
                 </p>
               </div>
