--- a/pages/gastro.html
+++ b/pages/gastro.html
@@ -89,7 +89,11 @@
       </div>
 
       <div class="text-center" id="page2" style="background-color: white">
-        <h1>Good food is an inseparable part of perfect relaxation and therefore our team of chefs prepare meals according to traditional recipes using fresh, seasonal ingredients from local producers.</h1>
+        <h1 class="prefer">
+          Good food is an inseparable part of perfect relaxation and therefore
+          our team of chefs prepare meals according to traditional recipes using
+          fresh, seasonal ingredients from local producers.
+        </h1>
         <div class="pg-footer">
           <footer class="footer">
             <svg
@@ -306,7 +310,7 @@
               <div class="footer-copyright-wrapper">
                 <p class="footer-copyright-text">
                   <a class="footer-copyright-link" href="#" target="_self">
-                    ©2020. | Designed By: Pooja Nahelia. | All rights reserved.
+                    ©2024. | Designed By:Sachi S Bandara. | All rights reserved.
                   </a>
                 </p>
               </div>
