--- a/pages/hotel.html
+++ b/pages/hotel.html
@@ -340,7 +340,7 @@
               <div class="footer-copyright-wrapper">
                 <p class="footer-copyright-text">
                   <a class="footer-copyright-link" href="#" target="_self">
-                    ©2020. | Designed By: Pooja Nahelia. | All rights reserved.
+                    ©2024. | Designed By:Sachi S Bandara. | All rights reserved.
                   </a>
                 </p>
               </div>
